# smainer-telegram

./: .gitignore  .gitmodules  LICENSE  LIVE_TEST_OPERATIONS_INDEX.md  README.md  TELEGRAM_TOKEN_VERIFICATION_GUIDE.md  verify-telegram-bot-token.sh
miniapp/: .env.local.example  .env.production  .gitignore  PAYMENT_FLOW_IMPLEMENTATION.md  README.md  generate-logo.sh  index.html  logo-generator.html  package-lock.json  package.json  tailwind.config.js  test.html  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
scripts/: register-bot-commands.py  rollback-telegram-stack.sh  start-telegram-stack.sh  stop-telegram-stack.sh  verify-telegram-stack.sh
smainer-bot/: .env.example  .env.final-check  .env.vercel-check  .env.verify  .gitignore  README.md  requirements-dev.txt  requirements.txt  vercel.json
telegram-bot/: .env  .env.example  ARCHITECTURE.md  PRODUCTION_FIX_GUIDE.md  README.md  RELIABILITY_FIXES_SUMMARY.md  UX_ENHANCEMENT_PLAN.md  bot-reliability-check.sh  emergency-bot-fix.sh  fix-bot-port-conflict.sh  fix-bot-startup-now.sh  fix-live-bot-and-node-status.sh  fix-miniapp-url-404.sh  launch_bot.sh  live-recovery-latency-check.sh  patch-fix-bot-port-conflict.sh  production-latency-check.sh  pyproject.toml  quick-bot-check.sh  quick_setup.sh  start_bot.sh
telegram-bot/src/telegram_bot/: __init__.py  callback_server.py  config.py  handlers.py  main.py  models.py  payment.py  relayer_client.py  wallet.py
telegram-bot/tests/: conftest.py  test_callback_server.py  test_models.py  test_payment.py  test_relayer_resilience.py  test_wallet.py
(+153 files in other folders)
